package proto;
import "common.proto";

message Script {
  required ivec2 coord = 1;
  required string path = 2;
};

message CellBlueprint {
  message Tile {
    required int32 tileset = 1;
    required int32 index = 2;
  }

  repeated string tilesets = 1;
  repeated Tile tiles = 2;
  repeated Script scripts = 3;
}

message CellMap {
  message Coord {
    required ivec2 coord = 1;
    required string cell = 2;
  }

  repeated Coord coords = 1;
}
